fix welcome z-index

--- a/nwcc_pyramid/static/styles/theme.css
+++ b/nwcc_pyramid/static/styles/theme.css
@@ -155,7 +155,7 @@ hr {
 
 .welcomecontainer {
   position: relative;
-  z-index: -999999;
+  /* z-index: -9; */
 }
 
 .welcometxt {
